# nuxt-wagtail-starter

./: .dockerignore  .eslintrc.cjs  .gitignore  .lintignore  .watchmanconfig  Dockerfile.node  Dockerfile.python  Makefile  README.md  docker-compose.yml  manage.py  nodejs-entrypoint.sh  package-lock.json  package.json  pyproject.toml  python-entrypoint.sh  requirements.txt  requirements_local.txt
content/: api.py  asgi.py  local.example.ini  settings.py  urls.py
content/home/: models.py
content/home/migrations/: 0001_initial.py
content/mysite/: blocks.py  models.py
content/mysite/migrations/: 0001_initial.py
content/templates/: 404.html  base.html
docker/: README.md
docker/conf/nginx/: default.conf  node_proxy.conf
frontend/: nuxt.config.ts  package.json
frontend/components/: ImageBlock.vue  TextBlock.vue  TitleBlock.vue
frontend/pages/: [slug].vue  index.vue
tests/: test_settings.py
